name:                crusher
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:
    Crusher
  other-modules:
    Args
    Markup
    Stylesheet
  build-depends:
    base >= 4.7 && < 4.8,
    bytestring,
    containers,
    directory,
    lucid,
    optparse-applicative,
    process,
    scotty,
    stitch,
    stm,
    text,
    transformers,
    wai-extra
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    StandaloneDeriving
    UndecidableInstances
    ViewPatterns

executable crusher
  build-depends:
    base >= 4.6 && < 4.9,
    crusher
  hs-source-dirs: ./
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -threaded -with-rtsopts=-N
